...
    private func setupReceiptDetailTableView() {
        tableView = UITableView(frame: view.frame, style: .grouped)
        tableView.allowsSelection = false
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = Theme.Cell.extraSmallHeight
        tableView.separatorStyle = .singleLine
        tableView.accessibilityIdentifier = "receiptDetailTableView"
        tableView.cellLayoutMarginsFollowReadableWidth = false
        registeredCells.forEach {
            tableView.register($0.type, forCellReuseIdentifier: $0.id)
        }
    }

...
